JDK 24: notes